--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -31,8 +31,8 @@ services:
       - LDAP_SSL_HELPER_PREFIX=ldap
       - LDAP_OPENLDAP_UID=1001
       - LDAP_OPENLDAP_GID=1001
-      #- HOSTNAME="{{ domain }}"
-    hostname: {{ domain }}
+      - HOSTNAME="{{ domain }}"
+    #hostname: {{ domain }}
     command: >
       --loglevel debug
     networks:
