--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -32,7 +32,7 @@ services:
       - LDAP_OPENLDAP_UID=1001
       - LDAP_OPENLDAP_GID=1001
       - HOSTNAME="{{ domain }}"
-    #hostname: {{ domain }}
+    hostname: {{ domain }}
     command: >
       --loglevel debug
     networks:
