Add traefik role for some needed vars

--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -42,7 +42,7 @@ services:
     command: >
       --loglevel debug
     networks:
-      - {{ docker_network }}
+      - {{ traefik_network }}
 
 networks:
   {{ docker_network }}:
