--- a/.ansible/templates/docker-compose.yaml.j2
+++ b/.ansible/templates/docker-compose.yaml.j2
@@ -8,7 +8,7 @@ services:
     image: osixia/openldap:1.5.0
     volumes:
       - /etc/localtime:/etc/localtime
-      - {{ ssl_cert_file }}/:/etc/ssl/certs/ca-certificates.crt
+      - {{ ssl_cert_file }}:/etc/ssl/certs/ca-certificates.crt
       - {{ config_dir }}/certs/:/container/service/slapd/assets/certs/
       - {{ config_dir }}/slapd:/etc/ldap/slapd.d
       - {{ data_dir }}:/var/lib/ldap
